Switch to MUI from tailwind

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"generate:types": "openapi-typescript 'https://raw.githubusercontent.com/sonallux/spotify-web-api/refs/heads/main/fixed-spotify-open-api.yml' --output src/types/spotify_api.d.ts"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/material": "^7.0.2",
 		"jszip": "^3.10.1",
 		"next": "15.3.1",
 		"openapi-fetch": "^0.13.5",
@@ -19,14 +22,12 @@
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
-		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.1",
 		"openapi-typescript": "^7.6.1",
-		"tailwindcss": "^4",
 		"typescript": "^5.8.3"
 	}
 }
