--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "spotvault",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://github.com/tomhense/SpotVault",
 	"scripts": {
 		"dev": "next dev --turbopack",
 		"build": "next build",
