Still not working

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"rsuite": "^5.79.1"
 	},
 	"devDependencies": {
+		"@cloudflare/next-on-pages": "^1.13.12",
 		"@eslint/eslintrc": "^3",
 		"@types/node": "^20",
 		"@types/react": "^19",
