Specify node verison

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@ name = "spotvault"
 compatibility_date = "2024-04-19"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = "out"
+
+[vars]
+NODE_VERSION = "v22.14.0"
