Restructure logic as preparation for the implentation of the restore backup logic

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"openapi-fetch": "^0.13.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.8",
 		"rsuite": "^5.79.1"
 	},
 	"devDependencies": {
